<resources>
    <string name="app_name">Clock with seconds</string>
    <string name="widget_name">Clock with seconds</string>
    <string name="widget_text">00:00</string>
    <string name="title_activity_calendar_config">Clock widget configuration</string>
    <string name="sHoursSize">Hours Font Size</string>
    <string name="sMinutesSize">Minutes Font Size</string>
    <string name="sSecondsSize">Seconds Font Size</string>
    <string name="sDateSize">Date Font Size</string>
    <string name="sTextColor">Text Color</string>
    <string name="sBackgroundColor">Background Color</string>
    <string name="sApplySettings">Apply Settings</string>
    <string name="sAlarmNotFound">Unfortunately an alarm application is not found on your device</string>
</resources>
